@@ -130,6 +130,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12622) A JavaScript constant to declare whether api.php is available
 * Add caching to the AJAX search
 * Added APCOND_INGROUPS
+* (bug 18585) Added a bunch of parameters to the revertpage message
 
 
 === Bug fixes in 1.12 ===
